0.3.0:
 * Last main release until the full version.

Song Additions:
- You Can't Run Encore
- (TBD) Sunshine
- (TBD) Soulless
- (??) Manual Blast

Features:
- Added "Screen Shake" option
  * This feature is used notably in 'YOU CAN'T RUN' and 'FINAL ESCAPE'

Improvements/Optimizations:
- (TBD) ASTC Version of the mod

Bug Fixes:
- Fixed an issue where missing a Phantom Note would add to the miss counter
- Fixed Screen Static not disabling when the option is turned off in You Can't Run
- Fixed the red vignette and the camera shake not stopping during the GHZ section in You Can't Run